[package]
name = "handy_macros"
version = "1.0.0"
edition = "2021"
description = "instead of annoyingly writing out .to_string() just do s!()"
readme = "README.md"
license = "MIT"
keywords = ["macro"]
repository = "https://github.com/salmmanfred/handy_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
